# query_string.py

./: .codeclimate.yml  .gitignore  .travis.yml  MANIFEST.in  README.md  README.md.html  README.rst  README.rst.html  classifiers.txt  description  query_stringc  requirements.txt  setup.cfg  shippable.yml  wercker.yml
.README/pypi.python.org/: README.rst
.Tests/: clone.sh  url.txt
.data/python/: README.rst
Examples/publish(object, module=None)/: publish().py
Examples/query_string(string)/: query_string("")  # {}  query_string("")  # {}c  query_string("https-::site.com")  # {}  query_string("https-::site.com")  # {}c  query_string("https-::site.org:index.php?k=v&k2=v2&k3=v3")  query_string("https-::site.org:index.php?k=v&k2=v2&k3=v3")c  query_string("index.php?k=v&k2=v2&k3=v3")  query_string("index.php?k=v&k2=v2&k3=v3")c  query_string("k=v&k2=v2&k3=v3")  query_string("k=v&k2=v2&k3=v3")c
Examples/unpublish(object, module=None)/: unpublish().py
README/: examples.py.txt  usage.md  usage.py.txt  usage.rst
README/WEBLOC/: Query string - Wikipedia.webloc
py_modules/: query_string.py
setup.py/: .classifiers.py  .dependency_links.py  .entry_points.py  .install_requires.py  .packages.py  .platforms.py  .py_modules.py  .scripts.py  __main__.py  author.py  classifiers.py  dependency_links.py  entry_points.py  install_requires.py  keywords.py  packages.py  py_modules.py  scripts.py  setup.py develop.command  version.py
tests/.sh/: clone.sh  install.sh  run.sh
tests/@accepts(*argtypes,**kwgtypes)/: test.py
tests/test_import/: test_import_query-string.py  (+1 more)
(+2 files in other folders)
