[metadata]
name = query_string
version = 0.0.15
url = http://github.com/russianidiot/query_string.py
description = query_string(string) function - get url query string dict
keywords = query, url
classifiers = 
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Natural Language :: Russian
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.0
	Programming Language :: Python :: 3.1
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development

[files]
packages = 
	query_string


